@@ -20,10 +20,12 @@
  * http//semanticturkey.uniroma2.it
  *
  */
- 
+
 package it.uniroma2.art.semanticturkey.ontology.sesame2;
 
 import it.uniroma2.art.owlart.models.RDFModel;
+import it.uniroma2.art.owlart.models.conf.ModelConfiguration;
+import it.uniroma2.art.owlart.sesame2impl.models.conf.Sesame2ModelConfiguration;
 import it.uniroma2.art.semanticturkey.ontology.OntologyManagerFactory;
 import it.uniroma2.art.semanticturkey.ontology.STOntologyManager;
 import it.uniroma2.art.semanticturkey.project.Project;
@@ -31,8 +33,13 @@ import it.uniroma2.art.semanticturkey.project.Project;
 public class OntologyManagerFactorySesame2Impl extends OntologyManagerFactory {
 
 	@Override
-	public <MODELTYPE extends RDFModel> STOntologyManager<MODELTYPE> createOntologyManager(Project<MODELTYPE> project) {
+	public <MODELTYPE extends RDFModel> STOntologyManager<MODELTYPE> createOntologyManager(
+			Project<MODELTYPE> project) {
 		return new STOntologyManagerSesame2Impl<MODELTYPE>(project);
+	}
+
+	public ModelConfiguration getModelConfiguration() {
+		return new Sesame2ModelConfiguration();
 	}
 
 	public String getId() {
